--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -11,7 +11,6 @@
   "You Should login": "عليك تسجيل الدخول",
   "The Item Already in Cart": "المنتج موجود سابقا في السلة",
   "Agree with trams and condition": "أتفق مع الشروط والأحكام",
-
   "password": "كلمة المرور",
   "Forget password": "نسيت كلمة المرور؟",
   "SignUp": "انشاء حساب",
@@ -160,12 +159,12 @@
   "Please fill this field": "الرجاء ملء هذا الحقل",
   "Your password must be at least 8 symbols with number, big and small letter and special character (!@#\\$%^&*).": "يجب أن تتكون كلمة مرورك من 8 رموز على الأقل مع رقم وحرف كبير وصغير ورمز خاص (! @ # \\ $٪ ^ & *).",
   "Not a valid email address. Should be your@email.com": "البريد الإلكتروني غير صالح. يجب أن يكون your@email.com",
-  "\uD83D\uDEA9 Please enter a valid email address.": "\uD83D\uDEA9 رجاء قم بإدخال بريد الكتروني صحيح.",
+  "🚩 Please enter a valid email address.": "🚩 رجاء قم بإدخال بريد الكتروني صحيح.",
   "Please select an item.": "الرجاء تحديد عنصر.",
-  "\uD83D\uDEA9 Username is too short.": "\uD83D\uDEA9 اسم المستخدم قصير جدًا.",
-  "\uD83D\uDEA9 CVV is not valid.": "\uD83D\uDEA9 CVV غير صالح.",
-  "\uD83D\uDEA9 Text is too short.": "\uD83D\uDEA9 النص قصير جدًا.",
-  "\uD83D\uDEA9 Password must be at least 6 characters.": "\uD83D\uDEA9 يجب أن تتكون كلمة المرور من 6 أحرف على الأقل.",
+  "🚩 Username is too short.": "🚩 اسم المستخدم قصير جدًا.",
+  "🚩 CVV is not valid.": "🚩 CVV غير صالح.",
+  "🚩 Text is too short.": "🚩 النص قصير جدًا.",
+  "🚩 Password must be at least 6 characters.": "🚩 يجب أن تتكون كلمة المرور من 6 أحرف على الأقل.",
   "Card has expired": "انتهت صلاحية البطاقة",
   "Expiry year is invalid": "سنة انتهاء الصلاحية غير صالحة",
   "Expiry month is invalid": "شهر انتهاء الصلاحية غير صالحة",
@@ -176,5 +175,22 @@
   "Looks_like_cart": "يبدو أنك لم تقم بإضافة أي شي \n إلى سلة التسوق الخاصة بك حتى الآن",
   "Your favourite is Empty": "المفضلة فارغة",
   "Looks_like_favourite": "يبدو أنك لم تقم بإضافة أي شي \n إلى المفضلة الخاصة بك حتى الآن",
-  "Explore now": "استكشف الآن"
+  "Explore now": "استكشف الآن",
+  "🚩 MasterCard Number is not valid.": "🚩 رقم  غير صالح. ",
+  "🚩 Phone number is not valid.": "🚩 رقم الهاتف غير صالح. ",
+  "Typography": "الخطوط والالوان",
+  "Type something...": "اكتب هنا",
+  "Add": "أضف",
+  "Update": "تحديث",
+  "Notes": "الملاحظات",
+  "Good Morning": "صباح الخير",
+  "Add Note": "أضف ملاحظة",
+  "Edit Note": "تعديل الملاحظة",
+  "You don't have Notes": "لا يوجد لديك ملاحظات",
+  "Create your first note !": "اكتب ملاحظاتك",
+  "Take Notes": "سجل ملاحظاتك",
+  "Not Just Texts": "ليس فقط نصوص",
+  "Stay Organized": "كُن منظماً",
+  "Fonts size :": "حجم الخط :",
+  "Colors": "الألوان"
 }
