--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -5,6 +5,8 @@
   "StartBoard": " Get Started",
   "Welcome": "Welcome",
   "back": "back!",
+  "Users": "Users",
+
   "password": "password",
   "Forget password": "Forget password?",
   "SignUp": "Sign up",
